fix: keep day label fixed by aligning calendar grid columns

--- a/strideIT/src/globals.css
+++ b/strideIT/src/globals.css
@@ -886,7 +886,7 @@ select.modal-input::-ms-expand {
 }
 .cal-day-row {
   display: grid;
-  grid-template-columns: 120px repeat(24, 90px);
+  grid-template-columns: 120px repeat(26, 90px);
   border-bottom: 1px solid var(--gray-100);
   gap: 0;
   min-height: 56px;
@@ -1979,7 +1979,7 @@ select.modal-input::-ms-expand {
   }
 
   .cal-times-header {
-    grid-template-columns: 100px repeat(24, 75px);
+    grid-template-columns: 100px repeat(26, 75px);
   }
 
   .cal-time-header-cell {
@@ -1988,7 +1988,7 @@ select.modal-input::-ms-expand {
   }
 
   .cal-day-row {
-    grid-template-columns: 100px repeat(24, 75px);
+    grid-template-columns: 100px repeat(26, 75px);
     min-height: 70px;
   }
 
@@ -2108,7 +2108,7 @@ select.modal-input::-ms-expand {
   }
 
   .cal-times-header {
-    grid-template-columns: 110px repeat(24, 75px);
+    grid-template-columns: 110px repeat(26, 75px);
   }
 
   .cal-time-header-cell {
@@ -2116,7 +2116,7 @@ select.modal-input::-ms-expand {
   }
 
   .cal-day-row {
-    grid-template-columns: 110px repeat(24, 75px);
+    grid-template-columns: 110px repeat(26, 75px);
     min-height: 37px;
   }
 
@@ -2149,7 +2149,7 @@ select.modal-input::-ms-expand {
   }
 
   .cal-times-header {
-    grid-template-columns: 115px repeat(24, 80px);
+    grid-template-columns: 115px repeat(26, 80px);
   }
 
   .cal-time-header-cell {
@@ -2157,7 +2157,7 @@ select.modal-input::-ms-expand {
   }
 
   .cal-day-row {
-    grid-template-columns: 115px repeat(24, 80px);
+    grid-template-columns: 115px repeat(26, 80px);
     min-height: 39px;
   }
 
@@ -2182,7 +2182,7 @@ select.modal-input::-ms-expand {
   }
 
   .cal-times-header {
-    grid-template-columns: 120px repeat(24, 80px);
+    grid-template-columns: 120px repeat(26, 80px);
   }
 
   .cal-time-header-cell {
@@ -2190,7 +2190,7 @@ select.modal-input::-ms-expand {
   }
 
   .cal-day-row {
-    grid-template-columns: 120px repeat(24, 80px);
+    grid-template-columns: 120px repeat(26, 80px);
     min-height: 40px;
   }
 
@@ -2255,11 +2255,11 @@ select.modal-input::-ms-expand {
 /* High resolution screens (2x pixel density and up) */
 @media (min-width: 1920px) {
   .cal-times-header {
-    grid-template-columns: 140px repeat(24, 85px);
+    grid-template-columns: 140px repeat(26, 85px);
   }
 
   .cal-day-row {
-    grid-template-columns: 140px repeat(24, 85px);
+    grid-template-columns: 140px repeat(26, 85px);
     min-height: 50px;
   }
 
